[gd_scene load_steps=2 format=3 uid="uid://cvbwx5byxr5w7"]

[ext_resource type="Script" path="res://graph_popup_menu.gd" id="1_cj40d"]

[node name="GraphPopupMenu" type="PopupMenu"]
size = Vector2i(154, 89)
visible = true
item_count = 3
item_0/text = "Проходной нод"
item_0/id = 0
item_1/text = "Выходной нод"
item_1/id = 1
item_2/text = "Входной нод"
item_2/id = 2
script = ExtResource("1_cj40d")

[connection signal="index_pressed" from="." to="." method="_on_index_pressed"]
[connection signal="popup_hide" from="." to="." method="_on_popup_hide"]
